--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -34,7 +34,7 @@
                 android:includeFontPadding="false"
                 android:text="설정"
                 android:textAlignment="center"
-                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
