--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
                 android:includeFontPadding="false"
                 android:text="채찍채찍 당근"
                 android:textAlignment="center"
-                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                android:textColor="#FFFFFF"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -82,9 +82,9 @@
                 android:id="@+id/textView5"
                 android:layout_width="38dp"
                 android:layout_height="22dp"
-                android:text="개"
+                android:text="00개"
                 android:textAlignment="center"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.118"
@@ -101,7 +101,7 @@
                 android:background="@color/colorPrimary"
                 android:fontFamily="@font/notosanscjkkr_regular"
                 android:text="도감 보기"
-                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                android:textColor="#FFFFFF"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -110,14 +110,34 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
+        <Button
+                android:id="@+id/goChatting"
+                android:layout_width="90dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:background="@color/colorPrimary"
+                android:fontFamily="@font/notosanscjkkr_regular"
+                android:text="채팅방 ㄱ"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.996"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.089" />
+
         <ImageView
                 android:id="@+id/imageView13"
                 android:layout_width="0dp"
                 android:layout_height="280dp"
                 app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.503"
                 app:srcCompat="@drawable/carrot_character01" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
