--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -69,16 +69,16 @@
             android:layout_width="409dp"
             android:layout_height="669dp"
             android:layout_marginStart="1dp"
-            android:layout_marginTop="1dp"
             android:layout_marginEnd="1dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
             <LinearLayout
                     android:layout_width="match_parent"
@@ -93,6 +93,7 @@
                         android:layout_marginLeft="18dp"
                         android:layout_marginRight="15dp"
                         android:background="#006F6F6F"
+                        android:onClick="onCollectionInfoBtn"
                         android:padding="15dp">
 
                     <View
@@ -125,6 +126,7 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="15dp"
                         android:background="#006F6F6F"
+                        android:onClick="onCollectionInfoBtn"
                         android:padding="15dp">
 
                     <View
@@ -155,6 +157,7 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="18dp"
                         android:background="#006F6F6F"
+                        android:onClick="onCollectionInfoBtn"
                         android:padding="15dp">
 
                     <View
@@ -194,6 +197,7 @@
                         android:layout_marginLeft="18dp"
                         android:layout_marginRight="15dp"
                         android:background="#006F6F6F"
+                        android:onClick="onCollectionInfoBtn"
                         android:padding="15dp">
 
                     <View
@@ -226,6 +230,7 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="15dp"
                         android:background="#006F6F6F"
+                        android:onClick="onCollectionInfoBtn"
                         android:padding="15dp">
 
                     <View
@@ -256,6 +261,7 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="18dp"
                         android:background="#006F6F6F"
+                        android:onClick="onCollectionInfoBtn"
                         android:padding="15dp">
 
                     <View
@@ -295,6 +301,7 @@
                         android:layout_marginLeft="18dp"
                         android:layout_marginRight="15dp"
                         android:background="#006F6F6F"
+                        android:onClick="onCollectionInfoBtn"
                         android:padding="15dp">
 
                     <View
@@ -327,6 +334,7 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="15dp"
                         android:background="#006F6F6F"
+                        android:onClick="onCollectionInfoBtn"
                         android:padding="15dp">
 
                     <View
@@ -357,6 +365,7 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="18dp"
                         android:background="#006F6F6F"
+                        android:onClick="onCollectionInfoBtn"
                         android:padding="15dp">
 
                     <View
@@ -396,6 +405,7 @@
                         android:layout_marginLeft="18dp"
                         android:layout_marginRight="15dp"
                         android:background="#006F6F6F"
+                        android:onClick="onCollectionInfoBtn"
                         android:padding="15dp">
 
                     <View
@@ -428,6 +438,7 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="15dp"
                         android:background="#006F6F6F"
+                        android:onClick="onCollectionInfoBtn"
                         android:padding="15dp">
 
                     <View
@@ -445,7 +456,7 @@
                             android:id="@+id/editText"
                             android:layout_width="24.5dp"
                             android:layout_height="74dp"
-                            android:layout_marginTop="2dp"
+                            android:layout_marginBottom="1dp"
                             android:background="@null"
                             android:ems="10"
                             android:fontFamily="@font/notosanscjkkr_medium"
@@ -455,7 +466,7 @@
                             android:textAlignment="center"
                             android:textSize="50sp"
                             app:layout_constraintBottom_toBottomOf="@+id/view11"
-                            app:layout_constraintEnd_toEndOf="@+id/view11"
+                            app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="@+id/view11"
                             app:layout_constraintTop_toTopOf="@+id/view11" />
 
@@ -467,6 +478,7 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="18dp"
                         android:background="#006F6F6F"
+                        android:onClick="onCollectionInfoBtn"
                         android:padding="15dp">
 
                     <View
@@ -497,7 +509,7 @@
                             app:layout_constraintStart_toStartOf="@+id/view12"
                             app:layout_constraintTop_toTopOf="@+id/view12" />
 
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
 
@@ -514,6 +526,7 @@
                         android:layout_marginLeft="18dp"
                         android:layout_marginRight="15dp"
                         android:background="#006F6F6F"
+                        android:onClick="onCollectionInfoBtn"
                         android:padding="15dp">
 
                     <View
@@ -554,6 +567,7 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="15dp"
                         android:background="#006F6F6F"
+                        android:onClick="onCollectionInfoBtn"
                         android:padding="15dp">
 
                     <View
@@ -592,6 +606,7 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="18dp"
                         android:background="#006F6F6F"
+                        android:onClick="onCollectionInfoBtn"
                         android:padding="15dp">
 
                     <View
