--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -38,7 +38,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/icon_white_left" />
 
-        <EditText
+        <TextView
                 android:id="@+id/collection_bartext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
