--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -31,8 +31,8 @@
                 android:id="@+id/goback"
                 android:layout_width="19dp"
                 android:layout_height="36dp"
+                android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/collection_bartext"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/icon_white_left" />
@@ -42,7 +42,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:ems="10"
                 android:fontFamily="@font/notosanscjkkr_medium"
                 android:inputType="textPersonName"
                 android:text="당근 도감"
