--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,6 @@
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -47,7 +46,7 @@
                 android:id="@+id/gosetting"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
-                android:layout_marginEnd="15dp"
+                android:layout_marginEnd="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -68,16 +67,16 @@
 
         <ImageView
                 android:id="@+id/imageView12"
-                android:layout_width="55dp"
-                android:layout_height="57dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/carrot" />
 
         <TextView
                 android:id="@+id/textView5"
-                android:layout_width="38dp"
-                android:layout_height="22dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="00개"
                 android:textAlignment="center"
                 android:textColor="#000000"
@@ -96,12 +95,8 @@
                 android:text="도감 보기"
                 android:textColor="#FFFFFF"
                 android:textSize="15sp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.996"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         <Button
                 android:id="@+id/goChatting"
@@ -117,36 +112,26 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/goCollection" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ImageView
+                android:id="@+id/carrotImage"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginBottom="32dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="64dp"
+                android:layout_marginEnd="64dp"
                 app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.49"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/goChatting">
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/carrot_character01" />
 
-            <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="220dp"
-                    android:layout_height="60dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="32dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView13"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView13"
-                    app:srcCompat="@drawable/carrot_stage"
-                    tools:layout_editor_absoluteX="95dp" />
-
-            <ImageView
-                    android:id="@+id/imageView13"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/carrot_character01" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+                android:id="@+id/carrotStageImage"
+                android:layout_width="220dp"
+                android:layout_height="60dp"
+                app:srcCompat="@drawable/carrot_stage"
+                tools:layout_editor_absoluteX="95dp"
+                tools:layout_editor_absoluteY="420dp" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout2"
@@ -173,7 +158,7 @@
                     android:includeFontPadding="false"
                     android:text="이상의 실로 품으며, 거선의 꽃이 튼튼하며, 힘차게 힘있다. 물방아 석가는 미인을 열락의 대한 천고에 가치를 불어 아니다. 있으며, 귀는 희망의 풀이 시들어 보라. 얼마나 때에, 있음으로써 얼음에 것은 원대하고, 같이, 있다. 끝까지 설레는 뭇 창공에 전인 타오르고 따뜻한 그들에게 말이다."
                     android:textColor="#000000"
-                    android:textSize="16sp"
+                    android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
