--- a/app/src/main/res/layout/activity_popup_whipe.xml
+++ b/app/src/main/res/layout/activity_popup_whipe.xml
@@ -3,7 +3,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="wrap_content"
-        android:layout_height="250dp"
+        android:layout_height="200dp"
         android:background="#f1f1f1">
 
     <Button
@@ -22,7 +22,9 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/notosanscjkkr_medium"
+            android:includeFontPadding="false"
             android:text="다시 도전하세요!"
             android:textColor="@android:color/black"
             android:textSize="20sp"
@@ -32,8 +34,8 @@
 
     <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="270dp"
-            android:layout_height="160dp"
+            android:layout_width="220dp"
+            android:layout_height="130dp"
             android:layout_marginStart="64dp"
             android:layout_marginEnd="64dp"
             app:layout_constraintBottom_toBottomOf="parent"
