--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#ff8448</color>
     <color name="colorPrimaryDark">#C97B63</color>
     <color name="colorAccent">#ffddc1</color>
+    <color name="orange">#ff8448</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 </resources>
