--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -18,7 +18,7 @@
     </FrameLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
+            android:id="@+id/top-nav"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:background="#ff8448"
@@ -73,5 +73,5 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/top-nav" />
 </androidx.constraintlayout.widget.ConstraintLayout>
