--- a/app/src/main/res/layout/activity_collection_info_acivity.xml
+++ b/app/src/main/res/layout/activity_collection_info_acivity.xml
@@ -7,7 +7,7 @@
         tools:context=".CollectionInfoAcivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
+            android:id="@+id/top-nav"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:background="#ff8448"
@@ -50,7 +50,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+            app:layout_constraintTop_toBottomOf="@+id/top-nav">
 
         <ImageView
                 android:id="@+id/carrotImageView"
