당근 N개 이상 텍스트 구현.

--- a/app/src/main/res/layout/activity_popup_collection.xml
+++ b/app/src/main/res/layout/activity_popup_collection.xml
@@ -28,7 +28,7 @@
             app:srcCompat="@drawable/carrot_gray" />
 
     <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/answerNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
