--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -33,9 +33,7 @@
                 android:layout_height="25dp"
                 android:layout_marginStart="16dp"
                 android:onClick="goback"
-                android:layout_width="19dp"
-                android:layout_height="36dp"
-                android:layout_marginStart="16dp"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -74,22 +72,7 @@
             android:layout_height="669dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-            <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/collection_recycler"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginBottom="16dp" />
-
-        </LinearLayout>
-    </ScrollView>
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
 
     <androidx.recyclerview.widget.RecyclerView
